--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.0",
-    "twilio": "^5.10.2"
+    "twilio": "^5.10.2",
+    "socket.io": "^4.7.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
