--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "vite": "5.0.0",
     "tailwindcss": "^3.4.3",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.35"
+    "postcss": "^8.4.35",
+    "@vitejs/plugin-react": "^4.2.1"
   }
 }
