--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^5.1.0",
     "mongoose": "^8.19.0",
     "twilio": "^5.10.2",
-    "socket.io": "^4.7.1"
+    "socket.io": "^4.7.1",
+    "jsonwebtoken": "9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
