--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "socket.io-client": "^4.7.1",
-    "react-router-dom": "^6.27.0",
-    "jsonwebtoken": "9.0.0"
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "vite": "5.0.0",
