--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^8.19.0",
     "twilio": "^5.10.2",
     "socket.io": "^4.7.1",
-    "jsonwebtoken": "9.0.0"
+    "jsonwebtoken": "9.0.0",
+    "bcryptjs": "2.4.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
